# AlienDimmer

./: CMakeLists.txt  README.md
cmake/Modules/: FindAlienFX.cmake
cmake/Scripts/: Sanitizers.cmake  StaticAnalyzers.cmake
